# medici

./: .gitignore  CMakeLists.txt
doc/: opensource.md  packet.md
src/: application.cpp  application.h  argumenthandler.h  argumnethandler.cpp  config.cpp  config.h  configdata.cpp  configmanager.cpp  configmanager.h  connectionmanager.cpp  connectionmanager.h  data.h  dependencyset.cpp  dependencyset.h  display.cpp  display.h  displaymanager.cpp  displaymanager.h  displaymanagerapple.cpp  displaymanagerapple.h  displaymanagerfactory.cpp  displaymanagerfactory.h  displaymanagerlinux.cpp  displaymanagerlinux.h  displaymanagerwindows.cpp  displaymanagerwindows.h  event.cpp  event.h  inputhandler.cpp  inputhandler.h  inputmanager.cpp  inputmanager.h  inputmanagerapple.cpp  inputmanagerapple.h  inputmanagerlinux.cpp  inputmanagerwindows.cpp  inputmanagerwindows.h  keyboardevent.cpp  keyboardevent.h  log.cpp  (+26 more)
src/application/: application.cpp  application.h  argumenthandler.cpp  argumenthandler.h
src/configmanager/: configmanager.cpp  configmanager.h
src/connectionmanager/: connectionmanager.cpp  connectionmanager.h
src/data/: config.cpp  config.h  data.h  display.cpp  display.h  event.cpp  jsondata.cpp  jsondata.h  keyboardevent.cpp  keyboardevent.h  mouseevent.cpp  mouseevent.h  packet.cpp  packet.h  point.cpp  point.h  rect.cpp  uuid.cpp  uuid.h
src/dependencyset/: dependencyset.cpp  dependencyset.h
src/displaymanager/: displaymanager.cpp  displaymanager.h  displaymanagerapple.cpp  displaymanagerapple.h  displaymanagerwindows.cpp
src/inputmanager/: inputmanager.cpp  inputmanager.h  inputmanagerlinux.h  inputmanagerwindows.cpp  inputmanagerwindows.h
src/json/: jsonarray.h  jsonbool.h  jsonnull.h  jsonnumber.h  jsonobject.h  jsonstring.h  jsonvalue.h
src/platformmanager/: platformmanager.cpp  platformmanager.h
src/servermanager/: servermanager.cpp  servermanager.h
src/statemanager/: statemanager.cpp  statemanager.h
src/tcp/: tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h
src/util/: log.cpp  log.h  rectmagnetutil.h
